<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:background="@color/light_gray">

    <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/logo"/>

    <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:background="@drawable/edit_text_background"
            android:padding="10dp"
            android:layout_below="@id/iv_logo"
            android:layout_marginTop="5dp"/>

    <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/edit_text_background"
            android:padding="10dp"
            android:layout_below="@id/et_username"
            android:layout_marginTop="16dp"/>

    <CheckBox
            android:id="@+id/cb_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:layout_below="@id/et_password"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"/>

    <Button
            android:id="@+id/b_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:layout_below="@id/cb_remember"
            android:layout_marginTop="10dp"/>
    <Button
            android:id="@+id/b_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:layout_below="@id/b_login"
            android:layout_marginTop="15dp"/>
    <Button
            android:id="@+id/b_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:layout_below="@id/b_register"
            android:layout_marginTop="15dp"/>


</RelativeLayout>
