<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:padding="16dp"
              android:background="@drawable/item_background"
              android:layout_marginBottom="8dp">

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

        <TextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_id"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"/>

        <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="16sp" android:layout_marginBottom="5dp"/>

        <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="16sp" android:layout_marginBottom="5dp"/>

        <TextView
                android:id="@+id/tv_major"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/major"
                android:textColor="@color/black"
                android:textSize="16sp" android:layout_marginBottom="5dp"/>

        <TextView
                android:id="@+id/tv_grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Grade: "
                android:textColor="@color/black"
                android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <Button
                android:id="@+id/b_edit"
                android:layout_width="75dp"
                android:layout_height="40dp"
                android:text="@string/edit"
                style="@style/ButtonStyle"/>

        <Button
                android:id="@+id/b_delete"
                android:layout_width="75dp"
                android:layout_height="40dp"
                android:text="@string/delete"
                style="@style/ButtonStyle"/>
        <Button
                android:id="@+id/b_cancel"
                android:layout_width="75dp"
                android:layout_height="40dp"
                android:text="@string/cancel"
                style="@style/ButtonStyle"/>

    </LinearLayout>


</LinearLayout>
