<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:background="@color/light_gray">

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:orientation="vertical">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
            <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5dip"
                    android:layout_marginBottom="5dp"
                    android:text="@string/student_id_2"
                    android:textSize="20sp">
            </TextView>
            <EditText
                    android:id="@+id/et_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/student_id"
                    android:inputType="number"
                    android:background="@drawable/edit_text_background"
                    android:padding="10dp"
                    android:layout_marginBottom="16dp"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="5dp"
                    android:text="@string/name_2"
                    android:textSize="20sp">
            </TextView>
            <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:background="@drawable/edit_text_background"
                    android:padding="10dp"
                    android:layout_marginBottom="16dp"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="5dp"
                    android:text="@string/gender_2"
                    android:textSize="20sp">
            </TextView>
            <Spinner
                    android:id="@+id/sp_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/gender"
                    android:background="@drawable/edit_text_background"
                    android:padding="10dp"
                    android:layout_marginBottom="16dp"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/major_2"
                    android:textSize="20sp">
            </TextView>
            <EditText
                    android:id="@+id/et_major"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/major"
                    android:inputType="text"
                    android:background="@drawable/edit_text_background"
                    android:padding="10dp"
                    android:layout_marginBottom="16dp"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="5dp"
                    android:text="@string/grade_2"
                    android:textSize="20sp">
            </TextView>
            <EditText
                    android:id="@+id/et_grade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/grade"
                    android:background="@drawable/edit_text_background"
                    android:padding="10dp"
                    android:layout_marginBottom="16dp"/>
        </TableRow>
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_gravity="center">
            <Button
                    android:id="@+id/b_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:background="@drawable/button_background"
                    android:textColor="@color/white"
                    android:layout_marginTop="16dp"/>
            <Button
                    android:id="@+id/b_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:background="@drawable/button_background"
                    android:textColor="@color/white"
                    android:layout_marginTop="16dp"/>
        </LinearLayout>


    </TableLayout>

</ScrollView>
