<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:background="@color/lightGray">

    <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            style="@style/TitleText"
            android:layout_marginTop="24dp"
            android:layout_centerHorizontal="true" />

    <EditText
            android:id="@+id/et_oldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            style="@style/EditTextStyle"
            android:layout_below="@id/tv_title" />

    <EditText
            android:id="@+id/et_newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            style="@style/EditTextStyle"
            android:layout_below="@id/et_oldPassword" />

    <EditText
            android:id="@+id/et_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            style="@style/EditTextStyle"
            android:layout_below="@id/et_newPassword" />

    <Button
            android:id="@+id/b_changePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            style="@style/ButtonStyle"
            android:layout_below="@id/et_confirm"
            android:layout_marginTop="24dp"
            android:layout_centerHorizontal="true" />
    <Button
            android:id="@+id/b_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/ButtonStyle"
            android:layout_below="@id/b_changePassword"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true" />

</RelativeLayout>
