<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/rounded_corners"
            android:elevation="4dp"
            android:padding="20dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="8dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/erzbir"
                android:textSize="20sp"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_marginBottom="20dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/github"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="8dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/github_com_erzbir"
                android:textSize="20sp"
                android:textColor="@android:color/holo_blue_dark"/>
    </LinearLayout>
</LinearLayout>
