<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              tools:context=".view.SettingActivity">
    <Button
            android:id="@+id/b_changePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            style="@style/ButtonStyle"
            android:layout_marginTop="24dp"
    />
    <Button
            android:id="@+id/b_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            style="@style/ButtonStyle"
            android:layout_marginTop="15dp"
    />
    <Button
            android:id="@+id/b_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/ButtonStyle"
            android:layout_marginTop="15dp"
    />
</LinearLayout>