<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:background="@color/light_gray">

    <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_list"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_students"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tv_title"
            android:paddingBottom="16dp"
            android:layout_marginBottom="60dp"
            android:clipToPadding="false" />

    <Button
            android:id="@+id/b_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_student"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="false"
            android:layout_marginTop="16dp" />
    <Button
            android:id="@+id/b_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:layout_marginStart="200dp"
            android:layout_toEndOf="@+id/b_add"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="false"
            android:layout_marginTop="16dp" />

</RelativeLayout>
