<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:background="@color/lightGray">

    <!-- 顶部背景图 -->
    <ImageView
            android:id="@+id/backgroundImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            android:layout_alignParentTop="true"/>
    <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_management_system"
            style="@style/TitleText"
            android:textColor="@color/black"
            android:layout_marginTop="24dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/backgroundImage" />
    <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_students_0"
            style="@style/SubtitleText"
            android:layout_below="@id/tv_title"
            android:layout_centerHorizontal="true" />
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ll_majors"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical"
            android:layout_below="@id/tv_total"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="16dp"
            android:elevation="4dp"
            android:layout_marginBottom="5dp"
            android:clipToPadding="false">
    </androidx.recyclerview.widget.RecyclerView>

    <Button
            android:id="@+id/b_manage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manage_students"
            style="@style/ButtonStyle"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

</RelativeLayout>
